force-app/main/default/objects/ssot__SMSPublication__dlm/fields/ssot__DurationSecondsQty__c.field-meta.xml
<CustomField>
    <fullName>ssot__DurationSecondsQty__c</fullName>
    <label>Duration Seconds Quantity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DurationSecondsQty</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>