force-app/main/default/objects/ssot__SMSPublication__dlm/fields/ssot__EngagementTopicGroupId__c.field-meta.xml
<CustomField>
    <fullName>ssot__EngagementTopicGroupId__c</fullName>
    <label>Engagement Topic Group</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EngagementTopicGroupId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>