force-app/main/default/objects/ssot__SMSPublication__dlm/fields/ssot__FailedRecordCt__c.field-meta.xml
<CustomField>
    <fullName>ssot__FailedRecordCt__c</fullName>
    <label>Failed Record Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FailedRecordCt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>