force-app/main/default/objects/ssot__SMSPublication__dlm/fields/ssot__rel_1697761172033_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761172033_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EmailTemplate_Id_map_SMSPublication__rel</label>
    <referenceTo>ssot__EmailTemplate__dlm</referenceTo>
    <relationshipLabel>EmailTemplate_Id_map_SMSPublication__rel</relationshipLabel>
    <relationshipName>rel_1697761172033_end</relationshipName>
    <type>Lookup</type>
</CustomField>