force-app/main/default/objects/ssot__SMSPublication__dlm/fields/ssot__rel_1697761197241_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761197241_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SMSPublication_EnagementAssetId_map__rel</label>
    <referenceTo>ssot__EmailTemplate__dlm</referenceTo>
    <relationshipLabel>SMSPublication_EnagementAssetId_map__rel</relationshipLabel>
    <relationshipName>rel_1697761197241_end</relationshipName>
    <type>Lookup</type>
</CustomField>